@@ -1,3 +1,9 @@
+2010-09-14  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWinPort.h:  Allow all Win2000+ API entries in Tcl
+	* win/tclWin32Dll.c: Eliminate dynamical loading of
+	advapi23 and kernal32 symbols.
+
 2010-09-13  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinChan.c:      Various clean-ups, converting from
